css/styles.css
html {
  box-sizing: border-box;
  font-size: 62.5%;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body {
  font-size: 1.6rem;
  font-family: 'Raleway', 'HelveticaNeue', 'Helvetica Neue', Helvetica, Arial,
    sans-serif;
}

img {
  max-width: 100%;
  display: block;
}

/* Globales */

a {
  text-decoration: none;
  color: #000000;
}

.container {
  width: min(90%, 117.6rem);
  margin: 0 auto;
}

h1 {
  font-weight: 100;
  margin: 0 0 2.4rem 0;
}

p {
  font-weight: 200;
}

/* Header */

.header {
  background-color: white;
}

.header-flex {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 2.2rem auto 3rem auto;
  gap: 0.7rem;
}

@media (min-width: 768px) {
  .header-flex {
    flex-direction: row;
    justify-content: space-between;
  }
}

/* Hero */

.hero {
  height: 35rem;
  background-image: url(../images/hero.jpg);
  background-size: cover;
  color: white;
}

.hero-contenido {
  padding: 8.5rem 0 11.2rem 0;
}

.hero-contenido p {
  margin-bottom: 3rem;
}

.formulario {
  position: relative;
}

.formulario .search {
  height: 5rem;
  padding-left: 1.1rem;
  border-radius: 0.8rem;
  width: 100%;
  display: inline-block;
}

.formulario .btn-search {
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
  display: block;
  border: none;
  text-indent: -9999px;
  width: 5rem;
  background-image: url(../images/lupa.png);
  background-repeat: no-repeat;
  background-position: right center;
  background-color: transparent;
}

@media (min-width: 768px) {
  .header-flex {
    margin-bottom: 2.2rem;
  }
  .hero {
    background-position: top;
  }
  .formulario {
    width: 41rem;
  }
}

/* Features */

.features {
  background: linear-gradient(to right, #741d51 0%, #e44e52 100%);
  padding-block: 2rem;
  color: white;
}

.features img {
  width: 3.2rem;
}

.features-grid {
  display: grid;
  grid-template-columns: 1fr;
}

.feature-item {
  display: flex;
  align-items: center;
}

.feature-texto {
  text-align: center;
  width: 100%;
  padding-left: 3.5rem;
}

.feature-texto p {
  margin-block: 1rem;
}

@media (min-width: 768px) {
  .features-grid {
    grid-template-columns: repeat(3, 1fr);
  }
  .feature-texto {
    padding-left: 0;
  }
}

